# Windows-Janitor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FOUNDATION.md  Janitor-Whitepaper-v0.1.md  PROJECT_LAYOUT.md  README.md  launch.bat
DOCS/: ARCHITECTURE.md  CHANGELOG.md  My_Thoughts.md  SBOM.md  SCRATCHPAD.md  STYLE_GUIDE.md  SUMMARY.md
DOCS/debugs/: debug_2026-04-27_audit.md
janitor-broker/: Cargo.toml
janitor-broker/src/: main.rs
janitor-cli/: Cargo.toml
janitor-cli/src/: main.rs
janitor-engine/: Cargo.toml
janitor-engine/src/: blacklist.rs  error.rs  lib.rs  models.rs  scanner.rs
janitor-engine/src/scanners/: browser_cache.rs  crash_dumps.rs  mod.rs  recycle_bin.rs  temp_dirs.rs  windows_update.rs
janitor-ui/: Cargo.toml  tauri.conf.json
janitor-ui/src/: main.rs
