[workspace]
members = ["janitor-engine", "janitor-cli", "janitor-broker"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Janitor Contributors"]
license = "MPL-2.0"
repository = "https://github.com/your-org/janitor"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
